# ParallePiDesktop

./: CMakeLists.txt  ParallelCalculations.cpp  ParallelCalculations.h  README.md  main.cpp
